# ng_to_remmina

./: Cargo.toml  README.md
src/: main.rs
src/file/: file_writer.rs
src/ng/: mod.rs  models.rs  ng_mapper.rs  ng_mapper_test.rs
src/remmina/: config_writer.rs  config_writer_test.rs  mod.rs  name_formatter.rs  name_formatter_test.rs  template.rs  template_test.rs
